# anymc3d-repro

./: .gitignore  README.md  anymc3d.py  anymc3d_backbone.py  anymc3d_v2.py  check_image_sizes.py  inference.py  inference_nifti.py  inference_online.py  meningioma_holdout_dataset.py  meningioma_t1c_dataset.py  pdcad_dataset.py  preprocess.py  pyproject.toml  requirements.txt  rsna_kaggle_model.py  train.py
configs/: train.yaml  train_pdcad.yaml  train_t1c.yaml
configs/data/: ct_rate.yaml  pdcad.yaml
configs/model/: anymc3d_backbone.yaml  anymc3d_v2_vitb_pdcad.yaml  anymc3d_vitb.yaml  anymc3d_vitb_pdcad.yaml  anymc3d_vitb_t1c.yaml  anymc3d_vitl.yaml  rsna_cnn.yaml  rsna_effb0.yaml  rsna_effb4.yaml  vjepa21_vitb.yaml
data_modules/: __init__.py  cls_data_module.py  data_augmentation.py  pdcad_dataset.py
model_arch/: __init__.py  anymc3d.py  vjepa2_anymc3d.py
output/: predictions_test.csv  summary_test.csv
output/PDCAD/no_DA/: predictions_test.csv  summary_test.csv
